--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,28 @@
 #aula 60 - arquivo messages.properties é um arquivo próprio da especificação do Spring Validator
 PosteriorDataEntrada.funcionario.dataSaida=Data de saida deve ser posterior a data de entrada.
+
+#para caracteres especiais, usar códigos UNICODE
+#
+#procurar tabela UNICODE https://unicode-table.com/pt/
+#
+#pois o arquivo de propriedades não possui um formato
+#padrão, como por exemplo UTF-8 ou qlqr tipo de ISO
+#o navegador pode não conseguir interpretar estes caracteres
+#
+#aula 63 - Titulos do Sidebar
+sidebar.link.home = Home
+sidebar.link.cadastrar = Cadastrar
+sidebar.link.listar = Listar
+sidebar.titulo.departamento = Departamentos
+sidebar.titulo.cargo = Cargos
+sidebar.titulo.funcionario = Funcion\u00E1rios
+
+#aula 63 - Titulos Tabela Funcionario
+tabela.funcionario.col.nome = Nome
+tabela.funcionario.col.salario = Sal\u00E1rio
+tabela.funcionario.col.departamento = Departamento
+tabela.funcionario.col.cargo = Cargo
+tabela.funcionario.col.endereco = Endere\u00E7o
+tabela.funcionario.col.dataEntrada = Admiss\u00E3o
+tabela.funcionario.col.dataSaida = Demiss\u00E3o
+tabela.funcionario.col.acao = A\u00E7\u00E3o
